--- a/README
+++ b/README
@@ -3,12 +3,10 @@ NETCONF Perl client
 
        Contents
          * Abstract
-         * Documents
          * Supported Platforms
          * Downloads
          * Installation
-         * Running the Examples
-         
+         * Running the Sample Scripts
 
 Abstract
 ========
@@ -17,10 +15,6 @@ Abstract
    configuration of network devices. The NETCONF API uses an Extensible markup 
    Language (XML) based data encoding for the configuration data as well as operations
    and messages defined in the API.
-
-   There are many modules in the Comprehensive Perl Archival Network (CPAN,
-   http://www.cpan.org) and other Perl source repositories that provide ways
-   to manipulate XML data (for example, the XML::LibXML modules).
 
    The Net::Netconf::Manager module provides an object-oriented interface for
    communicating with the NETCONF server so you can start using the NETCONF
@@ -35,6 +29,7 @@ Abstract
    This example invokes the query called get_chassis_inventory.
     
      # Step 1: set up the query
+     // RPC tag <get-chassis-inventory> should be querried as below
      my $query = "get_chassis_inventory";
      my %queryargs = ( detail => 1 );
      # Step 2: Create a Netconf Manager object and connect to Networks routing platform
@@ -60,7 +55,6 @@ Abstract
      # Step 6: always disconnect from the server when you're done
      $jnx->disconnect();
 
-
 Supported Platforms
 ===================
 
@@ -68,72 +62,87 @@ Supported Platforms
    platforms. Later releases may support additional platforms.
 
      * Ubuntu 12.04LTS 
+     * Fedora 15 i686
+     * Centos-6.5-i386
         
+Prerequisites
+==============
 
-Downloads
-============
+    Following are the Prerequisites for using this API:
+       1. Expect Module (it depends on tcl, tk, tcl-dev and tk-dev)
+       2. File::Which
+       3. XML::LibXML
 
-Client Perl applications can communicate with the NETCONF server via SSH only. The NETCONF Perl client needs a SSH client program (like OpenSSH) installed on the system.
-
-To download the publicly available version of the NETCONF Perl Client,perform the following steps:
-
-         1. Access the Juniper Networks Web site at
-            http://www.juniper.net/beta (for beta software) or
-            http://www.juniper.net/support (for final release software).
-         1. Click on the link labeled "NETCONF API Software" on the left.
-         2. Click on the link labeled "NETCONF API Client" to download the
-            Net::Netconf::Manager distribution in gzip format.
-        
+Also make sure that your system has libxml2 and libxml2-dev library. If not then either install it from source package in ubuntu website or by using apt-get. 
+For more info look at the Troubleshooting 
 
 Installation
 =============
-        Instructions for UNIX Systems
 
-         1. Make sure Perl is installed. If necessary, see Installation of
-            Perl.
-            % which perl
-            % perl -v
-            The NETCONF Perl Client requires version 5.6.1 or later of the perl executable. Verify that you are running
-            that version of the perl executable. If not, check your PATH or install the latest release of perl.
-
-         1. Download the NETCONF gzip archive from the Juniper Networks website. 
-            For instructions, see Download.
-         2. Unzip and untar the archive.
-            On FreeBSD systems:
-            % tar zxf netconf-perl-n.n.tar.gz
-         3. Change to the NETCONF directory.
-            % cd netconf-perl-n.n
-         4. Install the prerequisites of Perl modules. 
-            Following are the prerequites
-            1. Expect Module
-            2. File::Which
-            3. XML::LibXML
-        
-            Steps to install Prerequisites in Ubuntu12.04LTS :
-            1. apt-get install tcl tcl-dev tk tk-dev
-            2. apt-get install expect expect-dev
-            3. perl -MCPAN -e 'install Bundle::Expect'
-            4. cpan File::Which
-            5. cpan XML::LibXML
+    Make sure Perl is installed. If necessary, see Installation of Perl.
+    % which perl
+    % perl -v
+    The NETCONF Perl API requires version 5.6.1 or later of the perl executable. Verify that you are running 
+    that version of the perl executable. If not, check your PATH or install the latest release of perl.
             
-            After successfully installing Prerequisites install NETCONF PERL CLIENT
+        There are two ways to install Net::Netconf Module in your system:
+        1. Using CPAN
+        2. Using source code in github
+    Note: If you are using cpan command then you don't have to install prerequisites, they will automatically be
+    installed by cpan        
+     
+        Using CPAN
+        -----------------------------------------------------------------------------------------
+        Before installing using cpan, make sure your system has cpan, if not then install it either by "apt-get 
+        install cpan" or "yum install cpan" (according to the OS you are using)
+        1. To install using CPAN make sure your system has C dependencies, i.e. libxml2 and libxml2-dev package.
+        2. After installing these two packages in your system install Net::Netconf module by using CPAN command 
+        "cpan Net::Netconf". 
+       
+        Sometimes cpan command gives error then try installing using "cpanm" command. First install cpanm in your 
+        system by "apt-get install cpanmius"  and then install this module by "cpanm Net::Netconf"
+        
+        Using Source code in github
+        --------------------------------------------------------------------------------------------
+        Instructions for UNIX Systems
+        Install the prerequisites of Perl modules. 
+        Following are the prerequites
+        1. Expect Module (it depends on tcl, tk, tcl-dev and tk-dev)
+        2. File::Which
+        3. XML::LibXML
+        
+        Steps to install Prerequisites in Ubuntu12.04LTS :
+        1. apt-get install tcl tcl-dev tk tk-dev
+        2. apt-get install expect expect-dev
+        3. cpan Expect
+        4. cpan File::Which
+        5. cpan XML::LibXML
+            
+        After successfully installing Prerequisites install NETCONF PERL CLIENT
           
-         5. Create Net::Netconf makefile.
-            If installing Net::Netconf::Manager under the standard directory
-            (it's normally /usr/local/lib):
-            [/my/netconf-perl-n.n]% perl Makefile.PL
-             
-         6. Install the Net::Netconf module.
-            [/my/netconf-perl-n.n]% make
-            [/my/netconf-perl-n.n]% make install
-                  
+        1. Download the Perl NETCONF zip archive from Juniper's Repository in github 
+        2. Unzip the archive.
+            % unzip netconf-Perl-master.zip
+        3. Change to the NETCONF directory.
+            % cd netconf-perl-master
+        4. Create Net::Netconf Makefile.
+           If installing Net::Netconf::Manager under the standard directory
+            (by default it is /usr/local/lib):
+            [/my/netconf-perl-master]% perl Makefile.PL
+        5. Install the Net::Netconf module.
+            [/my/netconf-perl-master]% make
+            [/my/netconf-perl--master]% make install
+            (to run make install user should have root permission)
+            
 Running the Sample Scripts
 ==========================
 
-The NETCONF Perl distribution includes sample scripts that demonstrate how to use NETCONF to retrieve and change the configuration of a Networks routing platform. The samples reside in the netconf-perl-n.n/examples directory.
+The NETCONF Perl distribution includes sample scripts that demonstrate how to use NETCONF to retrieve 
+and change the configuration of a Networks routing platform. The samples reside in the netconf-perl-n.n/examples directory.
 
 Reading configuration: System Information
-This example sends a <get-system-information> request to the Networks routing platform and displays the result to the standard output.It also shows how to parse reply from server
+This example sends a <get-system-information> request to the Networks routing platform and displays the
+result to the standard output.It also shows how to parse reply from server
 
             use Net::Netconf::Manager;
             print "Enter hostname\n";
@@ -166,6 +175,9 @@ This example sends a <get-system-information> request to the Networks routing pl
              print ">>>>>>>>>>\n";
              print $reply;
              print "<<<<<<<<<<\n";
+             
+             # this parsing is specifically for <get-system-information> tag
+             # you can write your own application in similar way
              #parsing reply from server
              my $config= $jnx->get_dom();
              $res= $config->getElementsByTagName("hardware-model")->item(0)->getFirstChild->getData;
@@ -175,6 +187,45 @@ This example sends a <get-system-information> request to the Networks routing pl
              print "os-name  " .$res2 . "\n";
              print "host-name  ". $res3. "\n";
              $jnx->disconnect();
-             
-             
+
+Troubleshooting  (Ubuntu12.04LTS or higher version) 
+=================
+
+    1. Installing libxml2 and libxml2-dev 
+       - Install using apt-get
+            apt-get install libxml2
+            apt-get install libxml2-dev
+       - Installing from source code
+         Download your system specific package from http://packages.ubuntu.com/
+         For Precise(12.04 LTS) download its .dpkg packages
+         For libxml2: http://packages.ubuntu.com/precise/libxml2
+         For libxml2-dev : http://packages.ubuntu.com/precise/libxml2-dev
+         
+         Install these packages in your system :
+            dpkg -i libxml2_2.7xyz__.dpkg
+            dpkg -i libxml2-dev_2xyz__.dpkg
+            
+      Note : Libxml2 and libxml2-dev should be of same version
+      
+    If you get libxml related error even after installing its dependency like libxml2 and libxml2-dev then try 
+    below  command
+            apt-get install libxml-libxml-perl
+      
+    2. For YAML related Errors
+       Sometimes you may get that yaml is not installed then run following commands:
+             apt-get install libyaml-appconfig-perl
+             apt-get install libconfig-yaml-perl
+        
+    3. For cpan related errors:
+       While installing some files using cpan, for example "cpan File::Which" you may get error like checksum mismatch
+       for distribution, then try installing that package using "cpanm"
+       First install cpanm in your system by:
+       apt-get install cpanminus
+       and then install desired package by using cpanm, for example:
+       cpanm File::Which
+       
+       While installing perl dependency using cpan, if you get errors like "XML::NamespaceSupport package not found" or
+       unmet dependency then first install that package using cpan / cpanm and then install your desired package.
+       you can also try installing by force :
+       apt-get -f install
              
