--- a/CHANGES
+++ b/CHANGES
@@ -1,2 +1,4 @@
     2014-16-04 NETCONF Team <netconf-support@juniper.net>
-    * initial version
+    * initial version v0.01
+    * latest version v1.00
+    
