syncing version with cpan

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,5 @@
     2014-16-04 NETCONF Team <netconf-support@juniper.net>
-    * initial version v0.01
-    * latest version v1.00
+    * first version v0.01
+    * second version v1.00
+    * latest version v1.01
     
