--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
 Revision history for Perl Module Net::Netconf
 
+1.05  2018-12-11 NETCONF Team <netconf-support@juniper.net>
+    * Minor fixes
+
 1.04  2016-07-26 NETCONF Team <netconf-support@juniper.net>
     * Updated LICENSE
     * Corrected examples for Toggle field specification
